Allow BlazeModules to expose a helper that PackageFactory will use for creating fresh Package instances. Also make a few Package methods public.
    --
    MOS_MIGRATED_REVID=123247246